--- a/rag/rag_playground.ipynb
+++ b/rag/rag_playground.ipynb
@@ -46,7 +46,7 @@
    "source": [
     "from langchain_community.document_loaders import TextLoader\n",
     "\n",
-    "text_loader = TextLoader(\"data/speech.txt\")\n",
+    "text_loader = TextLoader(\"../data/speech.txt\")\n",
     "text_documents = text_loader.load()\n",
     "text_documents"
    ]
@@ -136,7 +136,7 @@
    "source": [
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "\n",
-    "pdf_loader = PyPDFLoader(\"data/attention.pdf\")\n",
+    "pdf_loader = PyPDFLoader(\"../data/attention.pdf\")\n",
     "text_documents_from_pdf = pdf_loader.load()\n",
     "text_documents_from_pdf"
    ]
